# AlloVolume

./: .gitignore  CMakeLists.txt  README.md
controller/: allosphere_pose.py  dataset_playback.py  hd_rendering.py  hdrendering.html  makefile  navigation.html  parameters.html  tf_editor.html
controller/scripts/: controls.js  math.js  tf_editor.js  tf_utils.js
controller/server/: alloposedelegate.py  controller_client.py  osc_pose.py  server.py
controller/styles/: controls.less  style.less
documents/: .gitignore  AlloVolume.graffle  allovolume-math.tex  makefile
include/: allosync.h  configparser.h  dataset.h  omnistereo_renderer.h  renderer.h  utils.h
include/allovolume/: allosphere_calibration.h  dataset.h  omnistereo_renderer.h  renderer.h
proto/: allovolume_protocol.proto  makefile
sandbox/: run.sh  visualize.coffee  volume_traversal.cpp
src/: allosphere_calibration.cpp  allosphere_calibration.h  allosphere_lens.cu  allosync.cpp  allovolume_common.h  allovolume_controller.cpp  allovolume_navcontrol.cpp  allovolume_renderer.cpp  configparser.h  cuda_common.h  dataset.cpp  dataset_converter.cpp  dataset_flash.cpp  image.cpp  image_codec.cpp  lens.cu  omnistereo_renderer.cpp  opengl_include.h  render_cli.cpp  renderer.cpp  renderer_cuda.cu  test.cpp  test_glfw.cpp  test_glut.cpp  timeprofiler.cpp  timeprofiler.h
src/allosphere/: allosphere_calibration.cpp  allosphere_calibration.h  allosphere_lens.cu
src/dataset/: dataset.cpp  dataset_flash.cpp
src/renderer/: cuda_common.cu  cuda_common.h  image.cu  image_codec.cpp  lens.cu  renderer_cuda.cu  rkv.h  transfer_function.cpp
utilities/: images2volume.py
utilities/allovolume/: __init__.py  controller_protocol.py  npy2volume.py
